# django_mixins_playground

./: .gitignore  ID Lookup Example.ipynb  Model Inheritance, Subclasses and Field Inheritance.ipynb  pyproject.toml
django_mixins/: README.md  manage.py
django_mixins/django_mixins/: asgi.py  settings.py  urls.py  wsgi.py
django_mixins/example_one/: models.py
django_mixins/example_one/migrations/: 0001_initial.py
